Added first blog post

--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
           <div class="center"><a href="https://aplwiki.com" target="blank">~APL wiki</a></div>
 
           <div class="container">
-            <!-- <div>
-              <h2><a href="#blog">Blog</a></h2>
+            <div>
+              <h2><a href="/blog/">Blog</a></h2>
               <p>
                 Curious about what's behind the site? Here you can find the
                 <span>functions</span> that are <span>executed in the backend</span> to create or
                 solve a logic game puzzle or to animate an image.
               </p>
-            </div> -->
+            </div>
 
             <div>
-              <h2><a href="/apl/logic_games/index.html">Logic game</a></h2>
+              <h2><a href="/apl/logic_games/">Logic game</a></h2>
               <p>
                 In this section you'll find logic game solvers of several types. Just check them
                 out! You can play around with <span>Trees</span>, <span>Electric charges</span>,
@@ -62,7 +62,7 @@
             </div>
 
             <div>
-              <h2><a href="/apl/animations/index.html">Animations</a></h2>
+              <h2><a href="/apl/animations/">Animations</a></h2>
               <p>
                 Have you ever wanted to animate an image made with characters? Now you can, add a
                 <span>Christmas animation</span> to whatever you want! Otherwise check the
