--- a/base/header.html
+++ b/base/header.html
@@ -26,7 +26,7 @@
           <span class="bar3"></span>
         </div>
         <ul class="menu">
-          <!-- <li class="item"><a href="/#blog">Blog</a></li> -->
+          <li class="item"><a href="/blog">Blog</a></li>
           <li class="item"><a href="/#dyalog-apl">Dyalog APL</a></li>
           <ul class="sub-menu">
             <li class="sub-item"><a href="/apl/logic_games/">Logic games</a></li>
