--- a/apl/animations/happy_new_year.html
+++ b/apl/animations/happy_new_year.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Master Quiz - Christmas animation</title>
+    <title>Christmas animation - Logic games | Master Quiz</title>
 
     <link rel="stylesheet" href="/css/apl/animations/happy_new_year.css" />
 
