--- a/apl/animations/index.html
+++ b/apl/animations/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Master Quiz - Logic games</title>
+    <title>Logic games | Master Quiz</title>
 
     <link rel="stylesheet" href="/css/apl/animations/index.css" />
 
