--- a/apl/logic_games/electric_charges.html
+++ b/apl/logic_games/electric_charges.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Master Quiz - Electric charges</title>
+    <title>Electric charges - Logic games | Master Quiz</title>
 
     <link rel="stylesheet" href="/css/apl/logic_games/puzzle.css" />
 
