--- a/apl/logic_games/save_the_cow.html
+++ b/apl/logic_games/save_the_cow.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Master Quiz - Save the cow</title>
+    <title>Save the cow - Logic games127 | Master Quiz</title>
 
     <link rel="stylesheet" href="/css/apl/logic_games/puzzle.css" />
 
