--- a/apl/animations/christmas.html
+++ b/apl/animations/christmas.html
@@ -6,10 +6,15 @@
 
     <link rel="stylesheet" href="/css/apl/animations/christmas.css" />
 
-    <script src="/js/apl/apl.js"></script>
+    <script src="/js/script.js"></script>
     <script src="/js/apl/animations/christmas.js" defer></script>
 
-    <script src="/js/script.js"></script>
+    <script src="/js/apl/apl.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.4/pako.min.js"
+      integrity="sha512-EAKzSKex+PXC0U9OG13r1059ysjrjkJEpZoONCnZa0mBROY28iBOOxZSErUVw1LzLr2+U5PhR7zPCPKidUVJqg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
   </head>
 
   <body>
