APL requests using TIO

--- a/apl/logic_games/save_the_cow.html
+++ b/apl/logic_games/save_the_cow.html
@@ -6,11 +6,11 @@
 
     <link rel="stylesheet" href="/css/apl/logic_games/puzzle.css" />
 
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" defer></script>
     <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
     <script src="/js/apl/logic_games/save_the_cow.js" defer></script>
 
-    <script src="/js/apl/apl.js" defer></script>
+    <script src="/js/apl/apl.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.4/pako.min.js"
       integrity="sha512-EAKzSKex+PXC0U9OG13r1059ysjrjkJEpZoONCnZa0mBROY28iBOOxZSErUVw1LzLr2+U5PhR7zPCPKidUVJqg=="
