--- a/apl/logic_games/hitori.html
+++ b/apl/logic_games/hitori.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/css/apl/logic_games/puzzle.css" />
 
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" defer></script>
     <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
     <script src="/js/apl/logic_games/hitori.js" defer></script>
 
