--- a/apl/logic_games/index.html
+++ b/apl/logic_games/index.html
@@ -35,6 +35,11 @@
           <h2>Save the cow</h2>
           <div class="card__preview"></div>
         </a>
+
+        <a class="card" href="/apl/logic_games/sudoku.html">
+          <h2>Sudoku</h2>
+          <div class="card__preview"></div>
+        </a>
       </div>
     </main>
 
