--- a/apl/logic_games/sudoku.html
+++ b/apl/logic_games/sudoku.html
@@ -64,6 +64,18 @@
         <section class="try">
           <h2>Solve</h2>
 
+          <div class="numbers">
+            <p>1</p>
+            <p>2</p>
+            <p>3</p>
+            <p>4</p>
+            <p>5</p>
+            <p>6</p>
+            <p>7</p>
+            <p>8</p>
+            <p>9</p>
+          </div>
+
           <table class="try__table"></table>
 
           <div class="try__modify">
@@ -80,6 +92,10 @@
 
           <div class="try__btns">
             <button class="btns__verify">Verify</button>
+            <button class="btns__mode">
+              <span class="material-icons more-edit"> mode_edit </span>
+              <span class="material-icons edit-off" style="display: none"> edit_off </span>
+            </button>
           </div>
         </section>
       </div>
