--- a/test/index.html
+++ b/test/index.html
@@ -45,7 +45,7 @@
       }
 
       .stars {
-        background: black url("/stars.png") repeat;
+        background: black url("./stars.png") repeat;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -58,7 +58,7 @@
       .twinkling {
         width: 10000px;
         height: 100%;
-        background: transparent url("/twinkling.png") repeat;
+        background: transparent url("./twinkling.png") repeat;
         background-size: 1000px 1000px;
         position: absolute;
         right: 0;
@@ -72,7 +72,7 @@
       .clouds {
         width: 10000px;
         height: 100%;
-        background: transparent url("/clouds_repeat.png") repeat;
+        background: transparent url("./clouds_repeat.png") repeat;
         background-size: 1000px 1000px;
         position: absolute;
         right: 0;
@@ -174,7 +174,7 @@
 
   <body>
     <div class="background-container">
-      <img src="/moon2.png" />
+      <img src="./moon2.png" />
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div class="clouds"></div>
