--- a/test/index.html
+++ b/test/index.html
@@ -179,7 +179,7 @@
         font-family: sans-serif;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: #ff25c3;
-        margin: 0;
+        margin: auto;
       }
     </style>
   </head>
