--- a/test/index.html
+++ b/test/index.html
@@ -1,203 +1,61 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <base target="_top" />
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Presenze UFO</title>
 
-    <script>
-      window.addEventListener("load", () => {
-        document.querySelector("#form").addEventListener("submit", (e) => {
-          e.preventDefault();
-          // google.script.run.processForm(e.srcElement);
-          document.querySelector(".contact-box").style.display = "none";
-          document.querySelector(".thanks-box").style.display = "flex";
-        });
-      });
-    </script>
-
-    <style>
-      /* Background */
-      .background-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-      }
-
-      img {
-        height: 30vh;
-        width: 30vh;
-        position: relative;
-        top: 7%;
-        left: 60%;
-        z-index: -2;
-      }
-
-      @media only screen and (min-width: 618px) {
-        img {
-          height: 35vh;
-          width: 35vh;
-        }
-      }
-
-      .stars {
-        background: black url("/test/stars.png") repeat;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: block;
-        z-index: -4;
-      }
-
-      .twinkling {
-        width: 10000px;
-        height: 100%;
-        background: transparent url("/test/twinkling.png") repeat;
-        background-size: 1000px 1000px;
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: -3;
-
-        animation: move-background 70s linear infinite;
-      }
-
-      .clouds {
-        width: 10000px;
-        height: 100%;
-        background: transparent url("/test/clouds_repeat.png") repeat;
-        background-size: 1000px 1000px;
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: -1;
-
-        animation: move-background 150s linear infinite;
-      }
-
-      @keyframes move-background {
-        from {
-          -webkit-transform: translate3d(0, 0, 0);
-        }
-        to {
-          -webkit-transform: translate3d(1000px, 0, 0);
-        }
-      }
-
-      /* Form */
-      .contact-box {
-        max-width: 30em;
-        text-align: center;
-        margin: 35vh auto 0;
-        padding: 25px 40px;
-        font-size: 1.5em;
-      }
-
-      .contact-box h2 {
-        color: #ff25c3;
-        position: relative;
-        padding-bottom: 10px;
-        margin-bottom: 1em;
-      }
-
-      .contact-box form {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-      }
-
-      .contact-box form input,
-      .contact-box form select {
-        outline: none;
-        color: #ff25c3;
-        border: 1px solid #ff25c3;
-        background-color: transparent;
-        padding: 0.5rem 0.75em;
-        margin-bottom: 22px;
-        transition: 0.3s;
-        font-weight: 600;
-      }
-      
-      .contact-box form select {
-        background-color: rgba(255, 37, 195, 0.27);
-      }
-
-      .contact-box input:hover,
-      .contact-box input:focus {
-        background-color: rgba(255, 37, 195, 0.27);
-      }
-
-      .contact-box input:not(:placeholder-shown),
-      .contact-box input:valid {
-        background-color: rgba(255, 37, 195, 0.17);
-      }
-
-      .contact-box button {
-        width: 100%;
-        margin-top: 1em;
-        padding: 0.5rem 1rem;
-        color: #ff25c3;
-        background-color: transparent;
-        font-size: 1.1em;
-        border: 1px solid #ff25c3;
-        outline: none;
-        transition: 0.3s;
-      }
-
-      .contact-box button:hover,
-      .contact-box button:focus {
-        background-color: rgba(255, 37, 195, 0.17);
-      }
-                 
-      @media only screen and (min-width: 618px) {
-        .contact-box form input,
-        .contact-box form select,
-        .contact-box button {
-          font-size: 1.1em;
-        }
-      }
-
-      /* Thanks */
-      .thanks-box {
-        position: relative;
-        text-align: center;
-        margin: auto;
-        top: 17em;
-      }
-
-      .thanks-box h1 {
-        font-size: 50px;
-        color: transparent;
-        font-family: sans-serif;
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: #ff25c3;
-        margin: auto;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
+    <script async defer src="https://apis.google.com/js/api.js"></script>
+    <script async defer src="https://accounts.google.com/gsi/client"></script>
   </head>
 
   <body>
     <div class="background-container">
-      <img src="/test/moon2.png" />
+      <img src="/img/moon2.png" />
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div class="clouds"></div>
     </div>
 
     <div class="contact-box">
-      <h2>Presenze UFO: 26/03/2022</h2>
+      <h2>Presenze UFO:</h2>
+      <script>
+        document.querySelector(".contact-box h2").innerText +=
+          " " +
+          new Date().toLocaleDateString("it-IT", {
+            day: "2-digit",
+            month: "2-digit",
+            year: "numeric",
+          });
+      </script>
+
+      <div
+        id="g_id_onload"
+        data-client_id="585871178834-6ccf5b0dcukd6grao01d4fsbgcee0oj2.apps.googleusercontent.com"
+        data-context="signin"
+        data-ux_mode="popup"
+        data-callback="handleCredentialResponse"
+      ></div>
+
+      <div class="g-signin2">
+        <div
+          class="g_id_signin"
+          data-type="standard"
+          data-shape="pill"
+          data-theme="outline"
+          data-text="continue_with"
+          data-size="large"
+          data-logo_alignment="left"
+        ></div>
+      </div>
+
       <form id="form" method="POST">
         <input
           type="email"
           name="email"
+          id="email"
           placeholder="Email"
           maxlength="32"
           pattern="\S+.*"
@@ -207,6 +65,7 @@
         <input
           name="name"
           placeholder="Nome"
+          id="name"
           maxlength="32"
           pattern="\S+.*"
           required
@@ -214,6 +73,7 @@
         <input
           type="text"
           name="surname"
+          id="surname"
           placeholder="Cognome"
           maxlength="32"
           pattern="\S+.*"
