--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="background-container">
-      <img src="/moon2.png" />
+      <img src="/test/moon2.png" />
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div class="clouds"></div>
